#-------------------------------------
# ChangeLog file for package Detector
#-------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-74
2023-10-18 Mikhail Dubrovin
- examples/test-issues-2023.py - add issue_2023_10_12
- app/det_ndarr_raw_proc - add parameter --expname to read stand-alone xtc files
- src/UtilsDarkProc.py - use parameter --expname

Tag: V02-00-73
2023-10-13 Daniel Damiani
- src/PyDetectorAccess.py - added support for Uxi.ConfigV2

Tag: V02-00-72
2023-10-09 Mikhail Dubrovin
- code preparation to production version of det_pixel_status command
- rename det_raw_pixel_status > det_pixel_status, src/UtilsRawPixelStatus.py > src/UtilsPixelStatus.py, clean code

Tag: V02-00-71
2023-09-13 Mikhail Dubrovin
- fix issue reported by Silke - mask from status was not merged correctly for epix10ka* gain ranges
- src/AreaDetector.py - use gu.merge_masks_for_gain_index

Tag: V02-00-70
2023-09-05 Mikhail Dubrovin
 src/UtilsCalib.py - return back parameters int_lo, int_hi, rms_lo, rms_hi, in DarkProc othervise jungfrau would not work
 src/UtilsDarkProc.py - add in kwa parameters int_lo, int_hi, rms_lo, rms_hi defined from command line det_ndarr_raw_proc
 src/UtilsJungfrauCalib.py - remove from __future__ import print_function

Tag: V02-00-69
2023-09-02 Mikhail Dubrovin
- src/UtilsCalib.py - fix input parameter names to intlow, inthig, rmslow, rmshig

Tag: V02-00-68
2023-08-22 Mikhail Dubrovin
- update doc/ChangeLog

Tag: V02-00-67
2023-08-22 Mikhail Dubrovin
- app/det_ndarr_raw_proc - use oct(d_verbos)

Tag: V02-00-66
2023-05-19 Mikhail Dubrovin
modified:
 ../app/det_raw_pixel_status - update USAGE, change default parameters
 UtilsRawPixelStatus.py - compleatiing det_raw_pixel_status Feat.11, tuning for production release

2023-05-15 Mikhail Dubrovin
modified:
../app/datinfo - add ds.env().experiment()add ds.env().experiment()